fixed some spacing in about page

--- a/pages/about.module.scss
+++ b/pages/about.module.scss
@@ -36,12 +36,12 @@
       display: flex;
       flex-wrap: wrap;
       list-style: none;
-      padding: 0;
+      padding: 0 0 0.5rem;
       margin-bottom: 0;
     }
 
     li {
-      margin-right: 0.5rem;
+      margin-right: 1rem;
       margin-bottom: 0.5rem;
       flex-basis: 6rem;
       opacity: 60%;
@@ -86,11 +86,6 @@
       display: block;
     }
 
-    .profilePhoto {
-      img {
-      }
-    }
-
     .bioText {
       padding: 0;
       margin: 2rem 0;
@@ -99,6 +94,7 @@
     .hobbies {
       li {
         flex-basis: 3rem;
+        margin-right: 0.5rem;
       }
     }
   }
